--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,248 @@
 .App {
+  font-family: "M Yuen PRC", sans-serif;
+  background-color: rgba(50, 213, 150, 0.1);
+}
+
+.Header {
   text-align: center;
+  padding-top: 1rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Logo_text {
+  font-size: 3rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Searchbar-Container {
+  width: 100vw;
+  height: 3.5rem;
+  background-color: #32d596;
+  margin-top: 15px;
+  text-align: center;
+  padding-top: 1.5rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.Searchbar {
+  border-radius: 50px;
+  background-color: white;
+  border: solid 1px rgba(0, 0, 0, 0.1);
+  height: 2rem;
+  width: 16rem;
+  max-width: 50vw;
+  min-width: 20vw;
+  padding-left: 1rem;
+}
+
+.Shopping-Cart {
+  position: absolute;
+  top: 105px;
+  right: 50px;
+  width: 50px;
+  height: 50px;
+  border: none;
+  background: none;
+  cursor: pointer;
+}
+
+#cartIcon {
+  color: white;
+  font-size: 2.5rem;
+}
+
+#cartIcon:hover {
+  color: aquamarine;
+}
+
+.quantities {
+  font-family: "M Yuen PRC", sans-serif;
+  position: absolute;
+  top: 12px;
+  left: 26px;
+  color: #32d596;
+}
+
+.Cart-Dropdown-container {
+  position: absolute;
+  top: 160px;
+  right: 40px;
+  width: 300px;
+  height: 400px;
+  z-index: 1;
+}
+
+.Cart-Dropdown {
+  width: 300px;
+  height: 340px;
+  background-color: white;
+  border-right: 1px solid black;
+  border-bottom: 1px solid black;
+  border-left: 1px solid black;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  overflow-y: scroll;
+}
+
+#dropdown-buffer {
+  height: 60px;
+}
+
+.Cart-header {
+  position: relative;
+  text-align: left;
+  width: 300px;
+  height: 60px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border: 1px solid black;
+  background-color: #32d596;
+}
+
+.Cart-header-text {
+  position: absolute;
+  top: 7px;
+  left: 15px;
+  color: white;
+  font-size: 1.5rem;
+}
+
+.Cart-header-subtotal {
+  position: absolute;
+  top: 30px;
+  left: 15px;
+  color: #228e65;
+}
+
+.Cart-clearButton-container {
+  position: absolute;
+  bottom: -2px;
+  left: 1px;
+  width: 300px;
+  height: 60px;
+  background-color: #32d596;
+  border-top: solid 1px black;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.close_cart-button {
+  position: absolute;
+  right: 0;
+  border: none;
+  background: none;
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+}
+
+.close_cart-icon {
+  font-size: 2rem;
+  color: #32d596;
+}
+
+.close_cart-icon:hover {
+  color: aquamarine;
+}
+
+.close_cart-icon-white {
+  font-size: 2rem;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.close_cart-icon-white:hover {
+  color: aquamarine;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Cart-clearButton {
+  margin-top: 15px;
+  height: 30px;
+  border: solid 1px white;
+  background: none;
+  color: white;
+  font-family: "M Yuen PRC", sans-serif;
+  cursor: pointer;
+}
+
+.Cart-clearButton:hover {
+  color: aquamarine;
+  border: solid 1px aquamarine;
+}
+
+.empty_header {
+  width: 300px;
+  height: 60px;
+  background-color: white;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-top: 1px solid black;
+  border-right: 1px solid black;
+  border-left: 1px solid black;
+}
+
+.empty_text-container {
+  text-align: center;
+  position: absolute;
+  top: 160px;
+  left: 50px;
+  width: 200px;
+}
+
+.empty_text {
+  color: #32d596;
+}
+
+.results {
+  display: grid;
+  grid-gap: 20px 125px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  margin-left: calc(100vw / 10);
+  margin-right: calc(100vw / 10);
+  justify-items: center;
+}
+
+.pagination {
+  height: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.pagination-Button {
+  background: none;
+  border: solid 2px #32d596;
+  color: #32d596;
+  height: 50px;
+  width: 100px;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.pagination-Button:hover {
+  border: solid 1px aquamarine;
+  color: aquamarine;
+}
+
+.button-left {
+  position: absolute;
+  left: 50px;
+}
+
+.button-right {
+  position: absolute;
+  right: 50px;
+}
+
+.Footer {
+  text-align: center;
+  width: 100vw;
+  background-color: #32d596;
+  padding-top: 80px;
+  padding-bottom: 60px;
+}
+
+@font-face {
+  font-family: "M Yuen PRC";
+  src: url("//db.onlinewebfonts.com/t/0866bd379846a9a0e111bbc79ea411d0.eot");
+  src: url("//db.onlinewebfonts.com/t/0866bd379846a9a0e111bbc79ea411d0.eot?#iefix") format("embedded-opentype"),
+  url("//db.onlinewebfonts.com/t/0866bd379846a9a0e111bbc79ea411d0.woff2") format("woff2"),
+  url("//db.onlinewebfonts.com/t/0866bd379846a9a0e111bbc79ea411d0.woff") format("woff"),
+  url("//db.onlinewebfonts.com/t/0866bd379846a9a0e111bbc79ea411d0.ttf") format("truetype"),
+  url("//db.onlinewebfonts.com/t/0866bd379846a9a0e111bbc79ea411d0.svg#M Yuen PRC") format("svg");
 }
