--- a/src/ItemCard.css
+++ b/src/ItemCard.css
@@ -3,18 +3,20 @@
     width: 200px;
     height: 250px;
     text-align: center;
-    border: solid 1px black;
-    background-color: white;
+    /*border: solid 1px black;*/
+    background-color: #fafafa;
     border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
 }
 
 .Card-base:hover {
-    box-shadow: 8px 6px 20px rgba(0, 0, 0, 0.1);
+    transform: translateY(-1px);
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.18);
 }
 
 .Card-base-image {
     background-color: white;
-    border-bottom: solid 1px black;
+    /*border-bottom: solid 1px black;*/
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
