--- a/src/App.css
+++ b/src/App.css
@@ -43,13 +43,13 @@
   cursor: pointer;
 }
 
+.Shopping-Cart:hover #cartIcon {
+  color: aquamarine;
+}
+
 #cartIcon {
   color: white;
   font-size: 2.5rem;
-}
-
-#cartIcon:hover {
-  color: aquamarine;
 }
 
 .quantities {
@@ -66,16 +66,16 @@
   right: 40px;
   width: 300px;
   height: 400px;
-  z-index: 1;
+  z-index: 2;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
 }
 
 .Cart-Dropdown {
   width: 300px;
   height: 340px;
   background-color: white;
-  border-right: 1px solid black;
-  border-bottom: 1px solid black;
-  border-left: 1px solid black;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   overflow-y: scroll;
@@ -92,7 +92,6 @@
   height: 60px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  border: 1px solid black;
   background-color: #32d596;
 }
 
@@ -113,12 +112,11 @@
 
 .Cart-clearButton-container {
   position: absolute;
-  bottom: -2px;
-  left: 1px;
+  bottom: 0;
+  left: 0;
   width: 300px;
   height: 60px;
   background-color: #32d596;
-  border-top: solid 1px black;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
@@ -172,9 +170,6 @@
   background-color: white;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  border-top: 1px solid black;
-  border-right: 1px solid black;
-  border-left: 1px solid black;
 }
 
 .empty_text-container {
@@ -204,19 +199,29 @@
   padding-bottom: 50px;
 }
 
+.pagination-PageNumber {
+  display: inline-block;
+  position: relative;
+  top: 10px;
+  width: 100vw;
+  text-align: center;
+  color: #228e65;
+}
+
 .pagination-Button {
   background: none;
   border: solid 2px #32d596;
   color: #32d596;
-  height: 50px;
-  width: 100px;
+  height: 40px;
+  width: 80px;
   font-size: 1rem;
   cursor: pointer;
+  z-index: 1;
 }
 
 .pagination-Button:hover {
-  border: solid 1px aquamarine;
-  color: aquamarine;
+  border: solid 2px #228e65;
+  color: #228e65;
 }
 
 .button-left {
