--- a/src/ItemCard.css
+++ b/src/ItemCard.css
@@ -3,9 +3,8 @@
     width: 200px;
     height: 250px;
     text-align: center;
-    /*border: solid 1px black;*/
     background-color: #fafafa;
-    /*border-radius: 10px;*/
+    border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
 }
 
@@ -16,9 +15,8 @@
 
 .Card-base-image {
     background-color: white;
-    /*border-bottom: solid 1px black;*/
-    /*border-top-left-radius: 10px;*/
-    /*border-top-right-radius: 10px;*/
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .Card-image {
@@ -39,6 +37,7 @@
     top: 0;
     left: 0;
     width: 160px;
+    height: 26px;
 }
 
 .Card-info-name {
@@ -69,4 +68,8 @@
     border: solid 1px black;
     background-color: #32d596;
     margin: 5px;
+}
+
+.variants:hover {
+    background-color: aquamarine;
 }
