--- a/src/App.css
+++ b/src/App.css
@@ -13,12 +13,15 @@
 }
 
 .Searchbar-Container {
+  position: sticky;
+  top: 0;
   width: 100vw;
   height: 3.5rem;
   background-color: #32d596;
   margin-top: 15px;
   text-align: center;
   padding-top: 1.5rem;
+  z-index: 9999;
 }
 
 .Searchbar {
@@ -34,7 +37,7 @@
 
 .Shopping-Cart {
   position: absolute;
-  top: 105px;
+  top: 15px;
   right: 50px;
   width: 50px;
   height: 50px;
@@ -62,7 +65,7 @@
 
 .Cart-Dropdown-container {
   position: absolute;
-  top: 160px;
+  top: 75px;
   right: 40px;
   width: 300px;
   height: 400px;
