--- a/src/App.css
+++ b/src/App.css
@@ -187,6 +187,66 @@
   color: #32d596;
 }
 
+.skeleton-base {
+  position: relative;
+  width: 200px;
+  height: 250px;
+  text-align: center;
+  background-color: #fafafa;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
+}
+
+.skeleton-image {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  width: 100%;
+  height: 130px;
+  background: linear-gradient(312deg, #e6fff1, #ceffe7);
+  background-size: 400% 400%;
+  animation: GradientScroll 2s ease infinite;
+}
+
+.skeleton-info {
+  position: absolute;
+  text-align: center;
+  padding: 10px 20px 20px;
+  width: 160px;
+  height: 36%;
+  z-index: 50;
+  background-color: white;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.skeleton-title {
+  position: absolute;
+  top: 30px;
+  left: 30px;
+  width: 140px;
+  height: 20px;
+  background: linear-gradient(312deg, #e6fff1, #ceffe7);
+  background-size: 400% 400%;
+  animation: GradientScroll 2s ease infinite;
+}
+
+.skeleton-price {
+  position: absolute;
+  top: 80px;
+  left: 50px;
+  width: 100px;
+  height: 20px;
+  background: linear-gradient(312deg, #e6fff1, #ceffe7);
+  background-size: 400% 400%;
+  animation: GradientScroll 2s ease infinite;
+}
+
+@keyframes GradientScroll {
+  0%{background-position:0 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0 50%}
+}
+
 .results {
   display: grid;
   grid-gap: 20px 125px;
